java/util/concurrent/tck/JSR166TestCase.java failed "assert(false) failed: unexpected node"

XMLWordPrintable

    • b16
    • x86_64
    • windows
    • Verified

        The following test failed in the JDK17 CI:

        java/util/concurrent/tck/JSR166TestCase.java

        Here's a snippet from the log file:

        ----------System.out:(21/1149)*----------
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=\\macro.cpp:555
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (t:\\workspace\\open\\src\\hotspot\\share\\opto\\macro.cpp:555), pid=49908, tid=13776
        # assert(false) failed: unexpected node
        #
        # JRE version: Java(TM) SE Runtime Environment (17.0+10) (fastdebug build 17-ea+10-LTS-728)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+10-LTS-728, compiled mode, sharing, tiered, compressed class ptrs, g1 gc, windows-amd64)
        # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_util\\scratch\\0\\hs_err_pid49908.mdmp
        #
        # An error report file with more information is saved as:
        # T:\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_util\\scratch\\0\\hs_err_pid49908.log
        #
        # Compiler replay data is saved as:
        # T:\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_util\\scratch\\0\\replay_pid49908.log
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #
        ----------System.err:(0/0)----------

        Here's the crashing thread's stack:

        --------------- T H R E A D ---------------

        Current thread (0x0000021df0733430): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=13776, stack(0x000000584d100000,0x000000584d200000)]


        Current CompileTask:
        C2: 48605 10545 !b 4 AbstractQueuedSynchronizerTest::testSignalAll_IMSE (26 bytes)

        Stack: [0x000000584d100000,0x000000584d200000]
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0xab2b81] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:235)
        V [jvm.dll+0xcd2367] VMError::report+0xfc7 (vmError.cpp:737)
        V [jvm.dll+0xcd3cbe] VMError::report_and_die+0x7ce (vmError.cpp:1534)
        V [jvm.dll+0xcd43d4] VMError::report_and_die+0x64 (vmError.cpp:1328)
        V [jvm.dll+0x4bab87] report_vm_error+0xb7 (debug.cpp:284)
        V [jvm.dll+0x96e621] PhaseMacroExpand::value_from_mem+0x3c1 (macro.cpp:555)
        V [jvm.dll+0x96d002] PhaseMacroExpand::scalar_replacement+0x892 (macro.cpp:817)
        V [jvm.dll+0x96100d] PhaseMacroExpand::eliminate_allocate_node+0x1bd (macro.cpp:1095)
        V [jvm.dll+0x961b08] PhaseMacroExpand::eliminate_macro_nodes+0x288 (macro.cpp:2589)
        V [jvm.dll+0x472faf] Compile::Optimize+0x9cf (compile.cpp:2233)
        V [jvm.dll+0x470591] Compile::Compile+0x1421 (compile.cpp:787)
        V [jvm.dll+0x3a5c3c] C2Compiler::compile_method+0x10c (c2compiler.cpp:106)
        V [jvm.dll+0x48910e] CompileBroker::invoke_compiler_on_method+0x94e (compileBroker.cpp:2307)
        V [jvm.dll+0x48680a] CompileBroker::compiler_thread_loop+0x2ba (compileBroker.cpp:1981)
        V [jvm.dll+0xc63196] JavaThread::thread_main_inner+0x226 (thread.cpp:1498)
        V [jvm.dll+0xc599f4] Thread::call_run+0x1b4 (thread.cpp:407)
        V [jvm.dll+0xab14ce] thread_native_entry+0x10e (os_windows.cpp:560)
        C [ucrtbase.dll+0x1fb80]
        C [KERNEL32.DLL+0x84d4]
        C [ntdll.dll+0x51791]

              Assignee:
              Vladimir Kozlov
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: