8262093: java/util/concurrent/tck/JSR166TestCase.java failed "assert(false) failed: unexpected node"